--- a/MyImdb/Views/Actor/Delete.cshtml
+++ b/MyImdb/Views/Actor/Delete.cshtml
@@ -1,35 +1,28 @@
-﻿@model MyImdb.ViewModels.ActorDeleteViewModel
-@{
-    ViewBag.Title = "Delete"; }
-@if (ViewBag.Error != null) {
-    <div class="row">
-        <div class="col-md-12">
-            <div class="alert alert-danger">
-                <p><i class="fa fa-warning"></i>&nbsp;@ViewBag.Error</p>
-            </div>
-        </div>
-    </div>
-}
-<h2>Delete actor</h2>
-@if (Model.Characters != null && Model.Characters.Count > 0) {<p>The actor @Model.Actor.Name has the following registered characters:</p>
-<ul>
-    @foreach (var character in Model.Characters) {
-        <li>@character</li>
-    }
-</ul>
+﻿
 
-}
-else { <p>The actor @Model.Actor.Name has no registered movies.</p>
-}
-<div class="alert alert-warning">
-    <p><i class="fa fa-warning"></i>&nbsp;Are you sure you want to delete this actor?</p>
-</div>
-<div>
-    @using (Html.BeginForm()) {@Html.AntiForgeryToken() @Html.HiddenFor(model => model.Actor.Id) @Html.HiddenFor(model => model.Actor.Name) @Html.HiddenFor(model => model.Actor.Birthplace)
+@using System.Web.Optimization @{
+    ViewBag.Title = "Delete Actor"; }
+@section libs { @Scripts.Render("~/bundles/actorDelete") }
+<div ng-controller="actorDeleteController">
+    <br />
+    <h1><span class="fas fa-user"></span> Delete Actor</h1>
+    <div ng-show="characters.length < 1">
+        <p>There are no registered characters to this actor.</p>
+    </div>
+    <div ng-hide="characters.length < 1">
+        <p>Deleting this actor will delete all characters associated with him.</p>
+        <p>Registered characters performed by {{actor.name}}:</p>
+        <ul class="top-space-lg">
+            <li class="top-space-md" ng-repeat="character in characters" ng-bind="character"></li>
+        </ul>
+    </div>
     <div class="row text-center">
         <div class="col-md-offset-2 col-md-6">
-            <button class="btn btn-danger" type="submit"><i class="fa fa-remove"></i>&nbsp;Delete</button> <a class="btn btn-default" href="/Actor/Edit/@Model.Actor.Id">Cancel</a>
+            <button class="btn btn-danger" ng-click="delete()"><i class="fa fa-remove"></i>&nbsp;Delete</button> <a class="btn btn-default" href="/Actor/Edit/{{actor.id}}">Cancel</a>
         </div>
     </div>
-}
+    <div class="top-space-xl">
+        <a href="/Actor"><i class="fa fa-chevron-left"></i>&nbsp;Back to Actors</a>
+    </div>
 </div>
+
