--- a/MyImdb/Views/Genre/Delete.cshtml
+++ b/MyImdb/Views/Genre/Delete.cshtml
@@ -1,36 +1,27 @@
-﻿@model MyImdb.ViewModels.GenreDeleteViewModel
-@{
-    ViewBag.Title = "Delete"; }
-@if (ViewBag.Error != null) {
-    <div class="row">
-        <div class="col-md-12">
-            <div class="alert alert-danger">
-                <p><i class="fa fa-warning"></i>&nbsp;@ViewBag.Error</p>
-            </div>
-        </div>
+﻿
+@using System.Web.Optimization @{
+    ViewBag.Title = "Delete genre"; }
+@section libs { @Scripts.Render("~/bundles/genreDelete") }
+<div ng-controller="genreDeleteController">
+    <br />
+    <h1><span class="fas fa-user"></span> Delete Genre</h1>
+    <div ng-show="movies.length < 1">
+        <p>There are no registered movies to this genre.</p>
     </div>
-}
-<h2>Delete genre</h2>
-@if (Model.Movies != null && Model.Movies.Count > 0) 
-    {<p>The genre @Model.Genre.Name has the following registered movies:</p>
-<ul>
-    @foreach (var movie in Model.Movies) {
-        <li>@movie</li>
-    }
-</ul>
-
-}
-else { <p>The genre @Model.Genre.Name has no registered movies.</p>
-}
-<div class="alert alert-warning">
-    <p><i class="fa fa-warning"></i>&nbsp;Are you sure you want to delete this genre?</p>
-</div>
-<div>
-    @using (Html.BeginForm()) {@Html.AntiForgeryToken() @Html.HiddenFor(model => model.Genre.Id) @Html.HiddenFor(model => model.Genre.Name)
+    <div ng-hide="movies.length < 1">
+        <p>Deleting this genre will delete all movies associated with it.</p>
+        <p>Registered movies with {{genre.name}} as their genre:</p>
+        <ul class="top-space-lg">
+            <li class="top-space-md" ng-repeat="movie in movies" ng-bind="movie"></li>
+        </ul>
+    </div>
     <div class="row text-center">
         <div class="col-md-offset-2 col-md-6">
-            <button class="btn btn-danger" type="submit"><i class="fa fa-remove"></i>&nbsp;Delete</button> <a class="btn btn-default" href="/Genre/Edit/@Model.Genre.Id">Cancel</a>
+            <button class="btn btn-danger" ng-click="delete()"><i class="fa fa-remove"></i>&nbsp;Delete</button> <a class="btn btn-default" href="/Genre/Edit/{{genre.id}}">Cancel</a>
         </div>
     </div>
-}
+    <div class="top-space-xl">
+        <a href="/Genre"><i class="fa fa-chevron-left"></i>&nbsp;Back to Genres</a>
+    </div>
 </div>
+
