--- a/MyImdb/Views/Genre/Edit.cshtml
+++ b/MyImdb/Views/Genre/Edit.cshtml
@@ -1,39 +1,35 @@
-﻿@model MyImdb.ViewModels.GenreViewModel
-@{
+﻿@using System.Web.Optimization @{
     ViewBag.Title = "Edit Genre"; }
-<h2>Edit Genre</h2>
-@if (ViewBag.Error != null) {
-    <div class="row">
-        <div class="col-md-12">
-            <div class="alert alert-danger">
-                <p><i class="fa fa-warning"></i>&nbsp;@ViewBag.Error</p>
-            </div>
-        </div>
-    </div>
-}
-@using (Html.BeginForm()) {@Html.AntiForgeryToken()
-<div class="row">
-    <div class="col-md-6">
-        <div class="form-horizontal">
-            @Html.HiddenFor(model => model.Id)
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-6">
-                    <button type="submit" class="btn btn-warning"><i class="fa fa-check"></i>&nbsp;Save</button>
-                    <a class="btn btn-danger" href="/Genre/Delete/@Model.Id"><i class="fa fa-trash"></i>&nbsp;Delete</a>
+@section libs { @Scripts.Render("~/bundles/genreEdit") }
+<div ng-controller="genreEditController">
+    <br />
+    <h1><span class="fas fa-film"></span> Edit Genre</h1>
+
+    <form name="genreEditForm" ng-submit="save(genreEditForm)" novalidate>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-horizontal">
+                    <div form-group="name">
+                        <label for="genreName" class="control-label col-md-2">Name</label>
+                        <div class="col-md-10">
+                            <input type="text" id="genreName" name="name" class="form-control" ng-model="genre.name" required ng-maxlength="100" />
+                            <p error="name" type="required">The name is required.</p>
+                            <p error="name" type="maxlength">The name must have a maximum of 100 characters.</p>
+                            <p srv-error="name"></p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <button type="submit" class="btn btn-warning"><i class="fa fa-check"></i>&nbsp;Save</button>
+                            <a class="btn btn-danger" href="/Genre/Delete/{{genre.id}}"><i class="fa fa-trash"></i>&nbsp;Delete</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </form>
+    <div class="top-space-xl">
+        <a href="/Genre"><i class="fa fa-chevron-left"></i>&nbsp;Back to Genres</a>
     </div>
 </div>
-}
-<div class="top-space-xl">
-    <a href="/Genre"><i class="fa fa-chevron-left"></i>&nbsp;Back to Genres</a>
-</div>
+
