--- a/MyImdb/Views/Movie/Delete.cshtml
+++ b/MyImdb/Views/Movie/Delete.cshtml
@@ -1,36 +1,27 @@
-﻿@model MyImdb.ViewModels.MovieDeleteViewModel
-@{
-    ViewBag.Title = "Delete"; }
-@if (ViewBag.Error != null) {
-    <div class="row">
-        <div class="col-md-12">
-            <div class="alert alert-danger">
-                <p><i class="fa fa-warning"></i>&nbsp;@ViewBag.Error</p>
-            </div>
-        </div>
+﻿
+@using System.Web.Optimization @{
+    ViewBag.Title = "Delete Movie"; }
+@section libs { @Scripts.Render("~/bundles/movieDelete") }
+<div ng-controller="movieDeleteController">
+    <br />
+    <h1><span class="fas fa-film"></span> Delete Movie</h1>
+    <div ng-show="characters.length < 1">
+        <p>There are no registered characters to this movie.</p>
     </div>
-}
-<h2>Delete movie</h2>
-@if (Model.Characters != null && Model.Characters.Count > 0) {<p>The movie @Model.Movie.Title has the following registered movies:</p>
-<ul>
-    @foreach (var character in Model.Characters) {
-        <li>@character</li>
-    }
-</ul>
-
-}
-else { <p>The genre @Model.Movie.Title has no registered characters.</p>
-}
-
-<div class="alert alert-warning">
-    <p><i class="fa fa-warning"></i>&nbsp;Are you sure you want to delete this movie?</p>
-</div>
-<div>
-    @using (Html.BeginForm()) {@Html.AntiForgeryToken() @Html.HiddenFor(model => model.Movie.Id) @Html.HiddenFor(model => model.Movie.Title)
+    <div ng-hide="characters.length < 1">
+        <p>Deleting this movie will delete all characters associated with it.</p>
+        <p>Registered characters in {{movie.name}} are:</p>
+        <ul class="top-space-lg">
+            <li class="top-space-md" ng-repeat="character in characters" ng-bind="character"></li>
+        </ul>
+    </div>
     <div class="row text-center">
         <div class="col-md-offset-2 col-md-6">
-            <button class="btn btn-danger" type="submit"><i class="fa fa-remove"></i>&nbsp;Delete</button> <a class="btn btn-default" href="/Movie/Edit/@Model.Movie.Id">Cancel</a>
+            <button class="btn btn-danger" ng-click="delete()"><i class="fa fa-remove"></i>&nbsp;Delete</button> <a class="btn btn-default" href="/Movie/Edit/{{movie.id}}">Cancel</a>
         </div>
     </div>
-}
+    <div class="top-space-xl">
+        <a href="/Movie"><i class="fa fa-chevron-left"></i>&nbsp;Back to Movies</a>
+    </div>
 </div>
+
