--- a/MyImdb/Views/MovieActor/Create.cshtml
+++ b/MyImdb/Views/MovieActor/Create.cshtml
@@ -1,54 +1,49 @@
-﻿@model MyImdb.ViewModels.MovieActorCreateViewModel
+﻿@using System.Web.Optimization @{
+    ViewBag.Title = "Add MovieActor"; }
+@section libs { @Scripts.Render("~/bundles/movieActorCreate") }
+<div ng-controller="movieActorCreateController">
+    <h2>Add a character</h2>
+    <form name="movieActorCreateForm" ng-submit="save(movieActorCreateForm)" novalidate>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-horizontal">
+                    <div form-group="title">
+                        <label for="movieActorCharacter" class="control-label col-md-2">Character</label>
+                        <div class="col-md-10">
+                            <input type="text" id="movieActorCharacter" name="title" class="form-control" ng-model="movieActor.character" required ng-maxlength="100" />
+                            <p error="character" type="required">The character name is required.</p>
+                            <p error="character" type="maxlength">The character name must have a maximum of 100 characteres.</p>
+                            <p srv-error="character"></p>
+                        </div>
+                    </div>                
+                    <div form-group="actor">
+                        <label for="movieActorActor" class="control-label col-md-2">Actor</label>
+                        <div class="col-md-10">
+                            <div class="btn-group" uib-dropdown dropdown-append-to-body>
+                                <button id="btn-append-to-body" type="button" class="btn btn-primary" uib-dropdown-toggle>
+                                    {{placeHolder}} <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="btn-append-to-body">
+                                    <li role="menuitem" ng-repeat="actor in actors"><a ng-click="selectActor(actor.id, actor.name)">{{actor.name}}</a></li>
+                                </ul>
+                                <p error="movieActorActor" type="required">The actor is required.</p>
+                                <p srv-error="movieActorActor"></p>
+                            </div>
+                        </div>
+                    </div>
 
-@{
-    ViewBag.Title = "Create";
-}
 
-<h2><span class="fas fa-user"></span> Add a new actor to the cast @Model.SelectedMovieId</h2>
-@if (ViewBag.Error != null) {
-    <div class="row">
-        <div class="col-md-12">
-            <div class="alert alert-danger">
-                <p><i class="fa fa-warning"></i>&nbsp;@ViewBag.Error</p>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <button type="submit" class="btn btn-warning"><i class="fa fa-check"></i>&nbsp;Save</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-}
-
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-
-<div id="client" class="form-horizontal">
-    <hr />
-    @Html.HiddenFor(model => model.SelectedMovieId)
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Character, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Character, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Character, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.SelectedActorId, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-8">
-            @Html.DropDownListFor(model => model.SelectedActorId, new SelectList(Model.Actors, "id", "name", Model.SelectedActorId), new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.SelectedActorId, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-            <input type="button" value="Discard" class="btn btn-default" onclick="resetForm()">
-        </div>
-
+    </form>
+    <div class="top-space-xl">
+        <a href="/Movie"><i class="fa fa-chevron-left"></i>&nbsp;Back to Movies</a>
     </div>
 </div>
-}
 
-<div>
-    @Html.ActionLink("<< Back to movies list", "Index")
-</div>
