--- a/MyImdb/Views/MovieActor/Delete.cshtml
+++ b/MyImdb/Views/MovieActor/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyImdb.ViewModels.MovieActorDeleteViewModel
+﻿@*@model MyImdb.ViewModels.MovieActorDeleteViewModel
 @{
     ViewBag.Title = "Delete"; }
 @if (ViewBag.Error != null) {
@@ -28,4 +28,27 @@
             </div>
         </div>
     }
+</div>*@
+
+
+@using System.Web.Optimization @{
+    ViewBag.Title = "Delete MovieActor"; }
+@section libs { @Scripts.Render("~/bundles/movieActorDelete") }
+<div ng-controller="movieActorDeleteController">
+    <br />
+    <h1>Delete relationship between movie and actor</h1>
+
+    <div class="alert alert-warning">
+        <p><i class="fa fa-warning"></i>&nbsp;Are you sure you want to delete this character?</p>
+    </div>
+    <div class="row text-center">
+        <div class="col-md-offset-2 col-md-6">
+            <button class="btn btn-danger" ng-click="delete()"><i class="fa fa-remove"></i>&nbsp;Delete</button>
+            <a class="btn btn-default" href="/Movie/Details/{{movieActor.selectedMovieId}}">Cancel</a>
+        </div>
+    </div>
+    <div class="top-space-xl">
+        <a href="/Movie"><i class="fa fa-chevron-left"></i>&nbsp;Back to Movies</a>
+    </div>
 </div>
+
